test/should_pass/basic_023.grg
actions basic_023;

rule r {
	pattern {
		x : Node;
		y : Node;
		negative {
			x --> y : Node;
		}
	}
	modify {
		delete (x, y);
	}
}

