test/should_fail/ret_008.grg
actions ret_008 using attrib_model_001;

rule r : (Node, NINT) {
	pattern {
		x: Node;
		y: Node;
	}
	modify {
		return(x, y);
	}
}

